[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MenuContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -22.0
margin_right = 64.0
margin_bottom = 22.0
size_flags_stretch_ratio = 2.0
columns = 2

[node name="Button 1" type="Button" parent="MenuContainer"]
margin_right = 62.0
margin_bottom = 20.0
text = "Scene 1"

[node name="Button 2" type="Button" parent="MenuContainer"]
margin_left = 66.0
margin_right = 128.0
margin_bottom = 20.0
text = "Scene 2"

[node name="Button 3" type="Button" parent="MenuContainer"]
margin_top = 24.0
margin_right = 62.0
margin_bottom = 44.0
text = "Scene 3"

[node name="Button 4" type="Button" parent="MenuContainer"]
margin_left = 66.0
margin_top = 24.0
margin_right = 128.0
margin_bottom = 44.0
text = "Scene 4"

[connection signal="pressed" from="MenuContainer/Button 1" to="." method="_on_Button_1_pressed"]
[connection signal="pressed" from="MenuContainer/Button 2" to="." method="_on_Button_2_pressed"]
[connection signal="pressed" from="MenuContainer/Button 3" to="." method="_on_Button_3_pressed"]
[connection signal="pressed" from="MenuContainer/Button 4" to="." method="_on_Button_4_pressed"]
